helped with resizing

--- a/public/smallstyle.css
+++ b/public/smallstyle.css
@@ -12,33 +12,33 @@ header>h1{
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); 
-    width: 720px;
-    height: 720px;
+    height: 75%;
+    aspect-ratio: 1/1;
     border: 8px solid #461707;
 }
 
 .black{
     position: relative;
-    width: 88px;
-    height: 88px;
+    height: 10%;
     background-color: #3E3E41;
     border: 1px black solid;
     float:left;
-    display: flex;
+    display:grid;
     justify-content: center;
     align-items: center;
+    aspect-ratio: 1/1;
 }
 
 .white{
     position: relative;
-    width:88px;
-    height: 88px;
+    height: 10%;
     background-color: #E1E0F9;
     border: 1px black solid;
     float:left;
-    display:flex;
+    display:grid;
     justify-content: center;
     align-items: center;
+    aspect-ratio: 1/1;
 }
 
 .lightpawn{
@@ -106,17 +106,11 @@ header>h1{
 }
 
 .white:hover{
-    width: 86px;
-    height: 86px;
     background-color: #DBCCC6;
-    border: 2px black solid;
 }
 
 .black:hover{
-    width: 86px;
-    height: 86px;
     background-color: #817E7D;
-    border: 2px black solid;
 }
 
 .white-drag-over{
