--- a/public/smallstyle.css
+++ b/public/smallstyle.css
@@ -69,6 +69,12 @@ h1{
     padding-bottom: 5px;
     width:100%;
     height: 5%;
+    opacity: 1;
+    transition:opacity 1s linear;
+    -webkit-trasition:opacity 1s linear;
+    -moz-transition:opacity 1s linear;
+    -o-transition:opacity 1s linear;
+    -ms-transition:opacity 1s linear;
 }
 
 html{
@@ -95,7 +101,7 @@ body{
 .checkmate{
     vertical-align: middle;
     text-align: center;
-    font-size: 36px;
+    font-size: 46px;
     font-weight: 900;
     color: red;
 }
@@ -152,6 +158,7 @@ body{
     align-items: center;
     aspect-ratio: 1/1;
     z-index: 1;
+    animation: 1s ease-in  iteration-count direction fill-mode;
 }
 
 .lightpawn{
@@ -255,3 +262,64 @@ body{
 .moves{
     background-image: linear-gradient(to right, #89ca94, #78927d, #5a7e61);
 } 
+
+.drop{
+    animation: change 5s 1;
+}
+
+@keyframes change{
+    50% {background: #02aa2c};
+}
+
+.fade-In{
+    animation: fadeIn ease 3s;
+    -webkit-animation: fadeIn ease 3s;
+    -moz-animation: fadeIn ease 3s;
+    -o-animation: fadeIn ease 3s;
+    -ms-animation: fadeIn ease 3s;
+}
+
+@keyframes fadeIn{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@-moz-keyframes fadeIn{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@-webkit-keyframes fadeIn{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@-o-keyframes fadeIn{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
+
+@-ms-keyframes fadeIn{
+    0% {
+        opacity:0;
+    }
+    100% {
+        opacity:1;
+    }
+}
