--- a/public/smallstyle.css
+++ b/public/smallstyle.css
@@ -104,6 +104,8 @@ body{
     font-size: 46px;
     font-weight: 900;
     color: red;
+    font: bold;
+    font-stretch: semi-expanded;
 }
 
 .Chess-Board {
